[package]
name = "vllm-cmd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vllm-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
educe.workspace = true
futures.workspace = true
itertools.workspace = true
libc.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["process", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
vllm-server.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
