[package]
name = "vllm-cmd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vllm-rs"
path = "src/main.rs"

[features]
default = []
native-tls-vendored = ["dep:native-tls-vendored"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
educe.workspace = true
futures.workspace = true
libc.workspace = true
native-tls-vendored = { workspace = true, optional = true }
time.workspace = true
tokio = { workspace = true, features = ["process", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
vllm-engine-core-client.workspace = true
vllm-server.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
