[package]
name = "vllm-llm"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
thiserror.workspace = true
vllm-engine-core-client.workspace = true

[dev-dependencies]
anyhow.workspace = true
expect-test.workspace = true
bytes.workspace = true
clap.workspace = true
rmp-serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeromq.workspace = true
