[package]
name = "vllm-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-util = []

[dependencies]
easy-ext.workspace = true
enum-as-inner.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
vllm-engine-core-client.workspace = true
vllm-metrics.workspace = true

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
expect-test.workspace = true
rmp-serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vllm-engine-core-client = { workspace = true, features = ["test-util"] }
vllm-metrics.workspace = true
zeromq.workspace = true

[lints]
workspace = true
