[package]
name = "vllm-openai-server"
version.workspace = true
edition.workspace = true

[lib]
name = "vllm_openai_server"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
openai-protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vllm-chat.workspace = true
vllm-engine-core-client.workspace = true
vllm-llm.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-openai = { workspace = true, features = ["full"] }
bytes.workspace = true
rmp-serde.workspace = true
tower.workspace = true
zeromq.workspace = true
