[package]
name = "vllm-openai-server"
version.workspace = true
edition.workspace = true

[lib]
name = "vllm_openai_server"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
futures-async-stream.workspace = true
openai-protocol.workspace = true
serde_json.workspace = true
thiserror-ext.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vllm-chat.workspace = true
vllm-engine-core-client.workspace = true
vllm-llm.workspace = true
vllm-text.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-openai = { workspace = true, features = ["full"] }
bytes.workspace = true
clap.workspace = true
expect-test.workspace = true
rmp-serde.workspace = true
tower.workspace = true
zeromq.workspace = true

[lints]
workspace = true
