[package]
name = "vllm-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
asynk-strim-attr.workspace = true
axum.workspace = true
futures.workspace = true
http-body.workspace = true
itertools.workspace = true
libc.workspace = true
prost.workspace = true
prost-types.workspace = true
rmpv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
socket2.workspace = true
thiserror-ext.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
vllm-chat.workspace = true
vllm-engine-core-client.workspace = true
vllm-llm.workspace = true
vllm-metrics.workspace = true
vllm-text.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-openai = { workspace = true, features = ["full"] }
bytes.workspace = true
clap.workspace = true
expect-test.workspace = true
rmp-serde.workspace = true
serial_test.workspace = true
tower.workspace = true
vllm-engine-core-client = { workspace = true, features = ["test-util"] }
zeromq.workspace = true

[lints]
workspace = true
