[package]
name = "vllm-text"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
asynk-strim-attr.workspace = true
base64.workspace = true
easy-ext.workspace = true
enum-as-inner.workspace = true
fastokens.workspace = true
futures.workspace = true
hf-hub.workspace = true
itertools.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tekken-rs.workspace = true
thiserror.workspace = true
thiserror-ext.workspace = true
tiktoken-rs.workspace = true
tokenizers.workspace = true
tracing.workspace = true
trait-set.workspace = true
vllm-engine-core-client.workspace = true
vllm-llm.workspace = true

[dev-dependencies]
criterion.workspace = true
expect-test.workspace = true
futures.workspace = true
tempfile.workspace = true
tokio.workspace = true
vllm-llm = { workspace = true, features = ["test-util"] }

[[bench]]
name = "tokenizer_backends"
harness = false

[lints]
workspace = true
